<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleOne"
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_1" />

        <TextView
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_text" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_house" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_of_kind" />

            <RadioButton
                android:id="@+id/question_one_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/royal_flush" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_of_kind" />

        </RadioGroup>

        <TextView
            android:id="@+id/titleTwo"
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_2" />

        <TextView
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_text" />

        <CheckBox
            android:id="@+id/question_two_wrongOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/two_pair" />

        <CheckBox
            android:id="@+id/question_two_correctOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/full_house" />

        <CheckBox
            android:id="@+id/question_two_wrongTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/straight" />

        <CheckBox
            android:id="@+id/question_two_correctTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/four_of_kind" />


        <TextView
            android:id="@+id/titleThree"
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_3" />

        <TextView
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_3_text2" />

        <EditText
            android:id="@+id/question_three_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:hint="@string/answer_here" />


        <TextView
            android:id="@+id/titleFour"
            style="@style/QuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_4" />

        <TextView
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4_text" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitStart"
            android:src="@drawable/twopair" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_pair" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/straight" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_of_kind" />

            <RadioButton
                android:id="@+id/question_four_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_pair" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitAnswer"
                android:text="@string/summit_answers" />

            <TextView
                android:id="@+id/text_view_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/score" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>